Made stream.toList compatible with workflow